reworked track menu

--- a/packages/host/src/components/SearchTracks/EventSearchTracks.scss
+++ b/packages/host/src/components/SearchTracks/EventSearchTracks.scss
@@ -3,3 +3,9 @@
   align-items: center;
   padding-top: 20px;
 }
+
+.trackNameContainer {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
