--- a/packages/host/src/home/Home.scss
+++ b/packages/host/src/home/Home.scss
@@ -76,6 +76,10 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  img {
+    width: 242px;
+  }
 }
 
 .Home-create-event-link {
