--- a/packages/host/src/eventCreation/PlaylistSelection.scss
+++ b/packages/host/src/eventCreation/PlaylistSelection.scss
@@ -29,3 +29,20 @@
     text-shadow: none;
   }
 }
+.PlaylistSummary {
+  display: flex;
+  margin: 10px 0;
+
+  .PlaylistDescription {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-left: 20px;
+  }
+
+  .PlaylistImg img {
+    width: 150px;
+    height: 150px;
+    border-radius: 4px;
+  }
+}
