--- a/packages/guest/src/topbar/SideMenu.scss
+++ b/packages/guest/src/topbar/SideMenu.scss
@@ -26,7 +26,7 @@
     background-color: $secondary-light;
     height: 180px;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: flex-end;
     flex-direction: column;
     padding: 15px;
