--- a/packages/guest/src/event/components/Event.scss
+++ b/packages/guest/src/event/components/Event.scss
@@ -168,7 +168,7 @@
           font-size: 12px;
           display: flex;
           flex-direction: column;
-          align-items: start;
+          align-items: flex-start;
           margin-bottom: 15px;
 
           .Event-organiser-title {
@@ -180,7 +180,7 @@
 
     .Event-description-container {
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       flex-direction: column;
       margin-bottom: 15px;
     }
