--- a/packages/guest/src/finder/Finder.scss
+++ b/packages/guest/src/finder/Finder.scss
@@ -2,7 +2,7 @@
 
 .list-item-requests {
   display: flex !important;
-  align-items: start !important;
+  align-items: flex-start !important;
   justify-content: space-between !important;
 
   .list-item-requests-event {
