--- a/packages/host/src/eventCreation/PlaylistSelection.scss
+++ b/packages/host/src/eventCreation/PlaylistSelection.scss
@@ -13,6 +13,22 @@
   align-items: center;
 }
 
+.More {
+  width: 240px;
+  text-align: center;
+  cursor: pointer;
+  color: #ffb000;
+  transition: 0.5s;
+
+  &:hover {
+    text-shadow: 1px 1px 1px black;
+  }
+
+  &:hover:active {
+    text-shadow: none;
+  }
+}
+
 .Plus {
   font-size: 190px;
   width: 240px;
