popup playlist subission fix

--- a/packages/guest/src/finder/SelectedEvent.scss
+++ b/packages/guest/src/finder/SelectedEvent.scss
@@ -5,6 +5,7 @@
   padding: 11px 10px;
   background-color: #f3edf5;
   align-items: center;
+  cursor: pointer;
 
   .SelectedEvent-image {
     width: 60px;
