--- a/packages/host/src/eventView/components/Summary/Styles/EditPlaylistPopup.scss
+++ b/packages/host/src/eventView/components/Summary/Styles/EditPlaylistPopup.scss
@@ -1,6 +1,6 @@
 .editPlaylistPopupWrapper {
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
     width: 100%;
     height: 100%;
     display: flex;
@@ -14,6 +14,15 @@
     padding: 20px;
     background: white;
     border-radius: 5px;
+  }
+
+  button {
+    margin-top: 10px;
+    color: white!important;
+
+    &:last-child {
+      margin-left: 10px;
+    }
   }
 }
 
