--- a/packages/guest/src/account/Account.scss
+++ b/packages/guest/src/account/Account.scss
@@ -1,25 +1,54 @@
-.avatarEditWrapper {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 10000;
+.Account-name {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.Account-avatar-block {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.Account-avatar-img {
+  width: 125px;
+  height: 125px;
+}
+
+.Account-title {
+  font-size: 26px;
+  line-height: 20px;
+}
+.description {
+  font-size: 18px;
+}
+.Account-edit-button {
+  color: white;
+  max-width: 200px;
+}
+.Account-input {
+  width: 300px;
+  max-height: 40px;
+  margin-top: 0 !important;
+  margin-left: 10px;
+  font-size: 24px;
+}
+
+.Account-icon-wrapper {
+  height: 20px;
+  width: 20px;
+}
+
+.Account-item-row {
   display: flex;
-  justify-content: center;
+  padding-left: 30px;
+  height: 60px;
+  margin-bottom: 0px;
+  &:last-child {
+    padding-left: 0;
+    justify-content: center;
+  }
+}
+.Account-item {
+  min-width: 200px;
+  display: flex;
   align-items: center;
-  top: 0;
-  left: 0;
-}
-
-.avatarEditContainer {
-  background: white;
-  padding: 20px;
-  display: flex;
-}
-
-.avatarControls {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 0 10px;
 }
