Refactor event picker

--- a/packages/guest/src/event/components/EventPicker.scss
+++ b/packages/guest/src/event/components/EventPicker.scss
@@ -1,4 +1,4 @@
-@import '../theme/colours';
+@import '../../theme/colours';
 
 .EventPicker-no-events-message {
   padding-top: 2em;
@@ -22,7 +22,6 @@
   width: 4em;
   height: 4em;
 }
-
 
 .EventPicker-events {
   margin-bottom: 1em;
