--- a/packages/guest/src/playlist/components/Playlist.scss
+++ b/packages/guest/src/playlist/components/Playlist.scss
@@ -1,5 +1,91 @@
 @import '../../theme/colours';
 
+.Playlist-tabs {
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  .playlist-header {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    height: 170px;
+    width: 100%;
+    background: $main url('../../assets/background-marshmallow-rect.png')
+      no-repeat center center;
+    background-size: cover;
+    justify-content: space-between;
+
+    .playlist-header-top-menu {
+      color: #fff;
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px;
+      height: 45px;
+      text-decoration: none;
+
+      a {
+        color: white;
+      }
+    }
+
+    .playlist-content {
+      height: 100px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      margin-bottom: 25px;
+
+      .playlist-content-img {
+        width: 150px;
+        height: 100px;
+        margin-left: 20px;
+
+        img {
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+      .playlist-content-title-block {
+        display: flex;
+        margin-left: 15px;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+
+        .playlist-content-title {
+          span {
+            color: white;
+            font-size: 18px;
+            font-weight: 500;
+          }
+
+          p {
+            color: white;
+          }
+        }
+
+        .playlist-content-title-length {
+          display: flex;
+          align-items: baseline;
+          justify-content: space-between;
+          padding-right: 30px;
+        }
+
+        .finder-playlist-header-container-button {
+          width: 45px;
+          height: 45px;
+          background-color: $secondary-main;
+        }
+      }
+    }
+  }
+}
+
 .Playlist-list {
   display: flex;
   justify-content: center;
@@ -90,10 +176,6 @@ img.Playist-img {
     height: 20px;
     margin-right: 10px;
   }
-
-  .playList-button-menu {
-    width: 20px;
-  }
 }
 
 .playList-name-group {
@@ -106,100 +188,4 @@ img.Playist-img {
 .img-cover,
 .img-cover-avatar {
   width: 100%;
-}
-
-.playlist-tabs {
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  .playlist-header {
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    height: 170px;
-    width: 100%;
-    background: $main url('../../assets/background-marshmallow-rect.png')
-      no-repeat center center;
-    background-size: cover;
-    justify-content: space-between;
-
-    .playlist-header-top-menu {
-      color: #fff;
-      display: flex;
-      width: 100%;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px;
-      height: 45px;
-      text-decoration: none;
-
-      a {
-        color: white;
-      }
-    }
-
-    .playlist-content {
-      height: 100px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: flex-start;
-      margin-bottom: 25px;
-
-      .playlist-content-img {
-        width: 150px;
-        height: 100px;
-        margin-left: 20px;
-
-        img {
-          height: 100%;
-          width: 100%;
-        }
-      }
-
-      .playlist-content-title-block {
-        display: flex;
-        margin-left: 15px;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-        height: 100%;
-
-        .playlist-content-title {
-          span {
-            color: white;
-            font-size: 18px;
-            font-weight: 500;
-          }
-
-          p {
-            color: white;
-          }
-        }
-
-        .playlist-content-title-length {
-          display: flex;
-          align-items: baseline;
-          justify-content: space-between;
-          padding-right: 30px;
-        }
-
-        .finder-playlist-header-container-button {
-          width: 45px;
-          height: 45px;
-          background-color: $secondary-main;
-        }
-      }
-    }
-  }
-}
-
-.playlist-list-item-wrapper {
-  a {
-    text-decoration: none !important;
-  }
-
-  .playlist-list-item {
-    display: flex;
-  }
 }
