Disable navigating to empty playlist

--- a/packages/guest/src/playlist/components/PlaylistListView.scss
+++ b/packages/guest/src/playlist/components/PlaylistListView.scss
@@ -3,6 +3,10 @@
     text-decoration: none !important;
   }
 
+  .PlaylistListView-disabled-link {
+    pointer-events: none;
+  }
+
   .PlaylistListView-item {
     display: flex;
   }
