--- a/packages/host/src/components/SearchTracks/EventSearchTracks.scss
+++ b/packages/host/src/components/SearchTracks/EventSearchTracks.scss
@@ -28,6 +28,10 @@
 }
 
 .listItemContent-column {
-  flex-direction: column!important;
-  align-items: flex-start!important;
+  flex-direction: column !important;
+  align-items: flex-start !important;
+}
+
+.EventSearchTracks-button {
+  margin-top: 16px;
 }
