--- a/packages/host/src/index.scss
+++ b/packages/host/src/index.scss
@@ -1,7 +1,25 @@
+@import 'theme/main';
+
 body {
-  font-family: Roboto !important;
+  background: $main-background !important;
+  font-family: $main-font-family;
 }
 
-.text-decoration-none {
-  text-decoration: none;
+a {
+  text-decoration: none !important;
+}
+
+.swal2-popup .swal2-styled.swal2-confirm {
+  &:focus {
+    box-shadow: none;
+  }
+  background: $secondary-main !important;
+}
+
+.swal2-icon.swal2-success .swal2-success-ring {
+  border: 0.25em solid $main !important;
+}
+
+.swal2-icon.swal2-success [class^='swal2-success-line'] {
+  background-color: $main !important;
 }
