--- a/packages/host/src/accountView/EditAvatar.scss
+++ b/packages/host/src/accountView/EditAvatar.scss
@@ -13,7 +13,7 @@
   left: 0;
 
   .avatarEditContainer {
-    background: $main-background;
+    background: $mm-white;
     padding: 20px;
     display: flex;
   }
