--- a/packages/host/src/index.scss
+++ b/packages/host/src/index.scss
@@ -1,7 +1,7 @@
 @import 'theme/main';
 
 body {
-  background: $main-background !important;
+  background: $mm-white !important;
   font-family: $main-font-family;
 }
 
