--- a/packages/host/src/theme/variables/_colours.scss
+++ b/packages/host/src/theme/variables/_colours.scss
@@ -3,6 +3,9 @@ $main: #af00ff;
 $secondary-light: #3aabd1;
 $secondary-main: #ffb000;
 
-$main-background: #f6f6f6;
-$black: (0, 0, 0, 0.5);
+$mm-white: #f6f6f6;
+$black: rgba(0, 0, 0, 0.5);
 $purple-tint: #5157ab;
+$grey-tint: rgba(81, 89, 166, 0.48);
+$light-grey: #979797;
+$bright-green: #27ae60;
