--- a/packages/host/src/home/Home.scss
+++ b/packages/host/src/home/Home.scss
@@ -1,9 +1,11 @@
+@import 'theme/main';
+
 .Home-root {
   display: flex;
   flex-grow: 1;
   overflow: hidden;
   z-index: 1;
-  background: #f6f6f6;
+  background: $mm-white;
 }
 
 .Home-error-message {
@@ -31,13 +33,11 @@
 .Home-left-menu {
   width: 300px;
   position: fixed;
-  background-color: #AF00FF;
+  background-color: $main;
   height: 100%;
   z-index: 10;
-  box-shadow:
-    0px 2px 4px -1px rgba(0, 0, 0, 0.12),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.12),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
 
 .Home-right-side {
