Tidy up and update of theme

--- a/packages/host/src/index.scss
+++ b/packages/host/src/index.scss
@@ -17,9 +17,9 @@ a {
 }
 
 .swal2-icon.swal2-success .swal2-success-ring {
-  border: 0.25em solid $main !important;
+  border: 0.25em solid $primary !important;
 }
 
 .swal2-icon.swal2-success [class^='swal2-success-line'] {
-  background-color: $main !important;
+  background-color: $primary !important;
 }
