--- a/packages/host/src/theme/theme.module.scss
+++ b/packages/host/src/theme/theme.module.scss
@@ -1,7 +1,7 @@
-@import 'variables/colours';
+@import 'variables';
 
 :export {
-  primaryMain: $main;
+  primaryMain: $primary;
   secondaryLight: $secondary-light;
   secondaryMain: $secondary-main;
 }
