--- a/packages/host/src/layout/DesktopLayout.scss
+++ b/packages/host/src/layout/DesktopLayout.scss
@@ -82,6 +82,10 @@ $width-enter: width 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;
     padding: ($spacing * 3) px;
     transition: $margin-leave;
     margin-left: -$nav-menu-width;
+
+    .DesktopLayout-toolbar {
+      @include toolbar;
+    }
   }
 
   .DesktopLayout-content-shifted {
