--- a/packages/host/src/layout/MobileLayout.scss
+++ b/packages/host/src/layout/MobileLayout.scss
@@ -2,7 +2,7 @@
 
 .MobileLayout-root {
   width: 100%;
-  display: flex;
+  max-width: 100%;
 
   .MobileLayout-app-bar {
     background-color: white;
