--- a/packages/host/src/home/Home.scss
+++ b/packages/host/src/home/Home.scss
@@ -3,16 +3,57 @@
 .Home-root {
   padding: 2rem;
 
+  .Home-shelf {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+  }
+
   .Home-carousel {
-    width: 300px;
+    width: 320px;
     height: 300px;
-    .Home-carousel-item {
-      width: 100%;
-      height: 100%;
+
+    .Home-carousel-caption {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1rem;
+      color: $secondary-main;
+      font-weight: 500;
+      text-transform: uppercase;
+      text-decoration: $primary;
+      letter-spacing: 0.75px;
     }
 
-    .carousel .slide {
-      background-color: $mm-white;
+    .Home-carousel-item {
+      padding-left: 2rem;
+      padding-right: 2rem;
+      padding-top: 0.2rem;
+      padding-bottom: 0.2rem;
+      width: 100%;
+    }
+
+    .Home-carousel-item-nav-left {
+      margin-left: -1rem;
+      padding-left: 0;
+    }
+
+    .Home-carousel-item-nav-right {
+      margin-right: -1rem;
+      padding-right: 0;
+    }
+  }
+
+  .Home-create-event-small {
+    display: block;
+    margin: 0 auto;
+    width: 120px;
+    height: 80px;
+    padding-bottom: 2rem;
+    margin-bottom: 4rem;
+    text-align: center;
+
+    img {
+      width: 100px;
+      height: 40px;
     }
   }
 }
