Fixed up home style a little

--- a/packages/host/src/home/Home.scss
+++ b/packages/host/src/home/Home.scss
@@ -56,4 +56,19 @@
       height: 40px;
     }
   }
+
+  .Home-create-event {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    height: 100px;
+    padding-bottom: 2rem;
+    margin-bottom: 4rem;
+    text-align: center;
+
+    img {
+      width: 120px;
+      height: 70px;
+    }
+  }
 }
