Refactoring to use single catalogue view for events and playlists

--- a/packages/host/src/event/catalogue/CatalogueBrowser.scss
+++ b/packages/host/src/event/catalogue/CatalogueBrowser.scss
@@ -1,13 +1,13 @@
-.EventsView-root {
-  .EventsView-button-gray {
+.CatalogueBrowser-root {
+  .CatalogueBrowser-button-gray {
     color: #979797;
   }
 
-  .Eventsview-button-orange {
+  .CatalogueBrowser-button-orange {
     color: #ffb000;
   }
 
-  .Eventsview-list {
+  .CatalogueBrowser-list {
     margin-top: 1em;
     display: flex;
     flex-flow: row wrap;
