Improved test rendering in event card

--- a/packages/host/src/catalogue/CatalogueCard.scss
+++ b/packages/host/src/catalogue/CatalogueCard.scss
@@ -20,7 +20,7 @@
   }
 
   .CatalogueCard-content {
-    padding: 15px 25px;
+    padding: 15px 15px;
     height: calc(100% - 194px);
     display: flex;
     justify-content: space-between;
@@ -33,13 +33,14 @@
   }
 
   .CatalogueCard-description {
+    max-width: 100%;
     .CatalogueCard-description-item {
       font-size: 12px;
       line-height: 16px;
-      margin-bottom: 4px;
       display: flex;
+      max-height: 2rem;
       img {
-        margin-right: 2rem;
+        margin-right: 1rem;
       }
     }
   }
