--- a/packages/host/src/catalogue/SmallPlaylistCard.scss
+++ b/packages/host/src/catalogue/SmallPlaylistCard.scss
@@ -1,4 +1,4 @@
-.PlaylistCardSmall-root {
+.SmallPlaylistCard-root {
   padding-left: 1em;
   padding-right: 1em;
   padding-bottom: 0.5rem;
@@ -6,29 +6,29 @@
   box-shadow: 0 10px 6px -6px #777;
   height: 250px;
 
-  .PlaylistCardSmall-link {
+  .SmallPlaylistCard-link {
     text-decoration: none;
   }
 
-  .PlaylistCardSmall-name {
+  .SmallPlaylistCard-name {
     color: #979797;
     font-size: 0.8rem;
     line-height: 1rem;
     font-weight: 600;
   }
 
-  .PlaylistCardSmall-description {
+  .SmallPlaylistCard-description {
     color: #979797;
     font-size: 0.75rem;
     line-height: 1rem;
     margin-bottom: 0.2rem;
   }
 
-  .PlaylistCardSmall-content-wrapper {
+  .SmallPlaylistCard-content-wrapper {
     padding-left: 1em;
   }
 
-  .PlaylistCardSmall-image {
+  .SmallPlaylistCard-image {
     height: 120px;
     width: 100%;
     padding-left: 10%;
