--- a/packages/host/src/catalogue/SmallEventCard.scss
+++ b/packages/host/src/catalogue/SmallEventCard.scss
@@ -5,6 +5,7 @@
   padding-top: 0.5rem;
   box-shadow: 0 10px 6px -6px #777;
   height: 250px;
+  width: 240px;
 
   .SmallEventCard-link {
     text-decoration: none;
